k8s/customer-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: customer-server
  template:
    metadata:
      labels:
        component: customer-server
    spec:
      containers:
        - name: customer-server
          image: [DOCKER_ID]/customer-server-593-594-606-607
          ports:
            - containerPort: 8001
