k8s/database-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database-server
  template:
    metadata:
      labels:
        component: database-server
    spec:
      containers:
      - name: database-server
        image: varunchandrashekar1/database-server-593-594-606-607
        ports:
        - containerPort: 8080
