k8s/products-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: products-server
  template:
    metadata:
      labels:
        component: products-server
    spec:
      containers:
        - name: products-server
          image: [DOCKER_ID]/products-server-593-594-606-607
          ports:
            - containerPort: 8002
