k8s/store-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: store-server
  template:
    metadata:
      labels:
        component: store-server
    spec:
      containers:
        - name: store-server
          image: varunkamathcs594/store-server
          ports:
            - containerPort: 8000
