k8s/customer-server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: customer-server
  ports:
    - port: 8001
      targetPort: 8001
