k8s/database-server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-server-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: database-server
  ports:
    - port: 8080
      targetPort: 8080
