k8s/products-server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: products-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: products-server
  ports:
    - port: 8002
      targetPort: 8002
