k8s/store-server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: store-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: store-server
  ports:
    - port: 8000
      targetPort: 8000
