k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/store/?(.*)
            pathType: Prefix
            backend:
              service:
                name: store-server-cluster-ip-service
                port:
                  number: 8000

          - path: /api/customer/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customer-server-cluster-ip-service
                port:
                  number: 8001

          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: products-server-cluster-ip-service
                port:
                  number: 8002
